--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,19 @@
+# current catalog
+/.vs
 /Debug
-/Debug/Debug
-/Debug/asf_install.dat
-
-*.face_module.vcxproj
-*.face_module.vcxproj.filters
-*.vcxproj.user
-
-face_module/X64
-
-face_module.VC.VC.opendb
+/X64
 face_module.VC.db
 face_module.sln
+face_module.VC.VC.opendb
+
+# second catalog
+/face_module/Debug
+/face_module/X64
+
+/face_module/asf_install.dat
+/face_module/face_module.vcxproj
+/face_module/face_module.vcxproj.filters
+/face_module/face_module.vcxproj.user
+
+
+
