--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,12 @@ face_module.sln
 face_module.VC.VC.opendb
 
 # second catalog
-/face_module/Debug
-/face_module/X64
-/face_module/asf_install.dat
-/face_module/face_module.vcxproj
-/face_module/face_module.vcxproj.filters
-/face_module/face_module.vcxproj.user
+face_module/Debug
+face_module/X64
+face_module/asf_install.dat
+face_module/face_module.vcxproj
+face_module/face_module.vcxproj.filters
+face_module/face_module.vcxproj.user
 
 
 
