--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,9 @@
 *.userosscache
 *.sln.docstates
 *.sln
-
+*.dat
+*.vcxproj
+*.filters
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
