--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,10 @@
 *.userosscache
 *.sln.docstates
 *.sln
-*.dat
+face_module/asf_install.dat
 *.vcxproj
 *.filters
+
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
