--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 *.sln.docstates
 *.sln
 face_module/asf_install.dat
+face_module/sample/3.jpg
+face_module/sample\4.jpg
 *.vcxproj
 *.filters
 *.user
