--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 *.sln
 face_module/asf_install.dat
 face_module/sample/3.jpg
-face_module/sample\4.jpg
+face_module/sample/4.jpg
 *.vcxproj
 *.filters
 *.user
