--- a/.gitignore
+++ b/.gitignore
@@ -8,13 +8,13 @@
 *.suo
 *.userosscache
 *.sln.docstates
-*.sln
 face_module/asf_install.dat
 face_module/sample/3.jpg
 face_module/sample/4.jpg
 *.vcxproj
 *.filters
 *.user
+*.bak
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
